# Messenger

./: alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1c0367c723f4_test.py  5491b3333aec_001_init.py  584ee1940df4_001_init.py  7464dda4ea7c_001_init.py  7e8e4ef67c0b_001_init.py  860ac0213ff3_create_account_table.py  8f088e140401_001_init.py  9a22abf99497_test2.py  bcb1c37b8436_001_init.py  bd933b3559e4_added_account_table.py  f20e93786fa4_001_init.py  fc41c4fac8db_001_init.py
backend/: config.py  crud.py  database.py  main.py  models.py  router.py  schemas.py  session.py
backend/__old_jwt_auth/: auth.py  router.py
backend/auth/: auth.py  config.py  database.py  manager.py  models.py  router.py  schemas.py  utils.py
backend/crud/: crud_company.py  crud_user.py
backend/pages/: router.py
backend/routers/: router_company.py  router_user.py
backend/websocket_chat/: router.py
frontend/: config.py  main.py  utils.py
frontend/pages/: lk.py  register.py  router.py
frontend/templates/: auth_login.html  auth_register.html  base.html  chat.html  homepage.html
templates/: auth_login.html  auth_register.html  index.html  success_login.html
