[tool.poetry]
name = "neon"
version = "0.1.0"
description = ""
authors = ["Comatrain <comatrain1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.5"}
streamlit = "^1.40.2"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
